--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-django==4.2.7
-djangorestframework
-pyyaml
-requests
-django-cors-headers
+asgiref==3.7.2
+certifi==2023.7.22
+charset-normalizer==3.3.2
+Django==4.2.7
+django-cors-headers==4.3.0
+djangorestframework==3.14.0
+idna==3.4
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+sqlparse==0.4.4
+typing_extensions==4.8.0
+urllib3==2.1.0
