--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
-Django>=4.0.0
+Django==4.2.7
 django-cors-headers==4.3.0
 djangorestframework==3.14.0
 idna==3.4
