Set Up postgresql

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET_KEY = 'django-insecure-wv0w$*$_w$e29xc^-qzu&^fh1=f!clvb5wdp&aolk1k-bt$=0n'
 FIELD_ENCRYPTION_KEY = 'N-J7zpv_Y5eIhtXONYBlTzt76p0GH6Z34EStVm4WXrM='
+DB_USER = 'postgres'
+DB_PASSWORD = 'fakepassword001'
