--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,24 @@ django-cors-headers==4.3.0
 django-encrypted-fields==1.1.2
 django-encrypted-model-fields==0.6.5
 djangorestframework==3.14.0
+exceptiongroup==1.1.3
 idna==3.4
+iniconfig==2.0.0
+packaging==23.2
 Pillow==10.1.0
+pluggy==1.3.0
+psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pycparser==2.21
 pycrypto==2.6.1
+pytest==7.4.3
 python-dotenv==1.0.0
 python-keyczar==0.716
 pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
 sqlparse==0.4.4
+tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.1.0
 whitenoise==6.6.0
