--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-encrypted-model-fields==0.6.5
 djangorestframework==3.14.0
 idna==3.4
 Pillow==10.1.0
+psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pycparser==2.21
 pycrypto==2.6.1
