--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
+crispy-bootstrap5==2023.10
 Django==4.2.7
 django-cors-headers==4.3.0
+django-crispy-forms==2.1
 djangorestframework==3.14.0
 idna==3.4
 Pillow==10.1.0
