--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,15 @@ Django==4.2.7
 django-cors-headers==4.3.0
 django-crispy-forms==2.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 idna==3.4
+mysqlclient==2.2.4
 Pillow==10.1.0
 psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pycparser==2.21
 pycrypto==2.6.1
+PyJWT==2.8.0
 python-dotenv==1.0.0
 python-keyczar==0.716
 pytz==2023.3.post1
