--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ crispy-bootstrap5==2023.10
 Django==4.2.7
 django-cors-headers==4.3.0
 django-crispy-forms==2.1
+django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 idna==3.4
-mysqlclient==2.2.4
 Pillow==10.1.0
 psycopg2-binary==2.9.9
 pyasn1==0.5.0
