--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,15 @@
 SECRET_KEY=b309e3c3f0f6d3fb71a62617c100f59bb166a585b6b124d2
 
 DB_USER=postgres
-DB_PASSWORD=german
+DB_PASSWORD=*******
 DB_NAME=virtual_bank
 DB_HOST=localhost
 DB_PORT=5432
 
+PGHOST='example.us-east-2.aws.neon.tech'
+PGDATABASE='virtualbank'
+PGUSER='vb_owner'
+PGPASSWORD='*********'
+
 JWT_KEY=00276c14dc8d8b2990a4b20024278907eccb2feec2a02eb8
+
