feat: Implement websocket for real-time transaction and notification updates

--- a/.env-example
+++ b/.env-example
@@ -11,5 +11,6 @@ PGDATABASE='virtualbank'
 PGUSER='vb_owner'
 PGPASSWORD='*********'
 
+REDIS_URL=redis-cloud.com
 JWT_KEY=00276c14dc8d8b2990a4b20024278907eccb2feec2a02eb8
 
