--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+pip>=24.2
+setuptools>=67.0
+wheel>=0.38
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==24.2.0
@@ -30,7 +33,6 @@ psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pyasn1_modules==0.4.0
 pycparser==2.21
-pycrypto==2.6.1
 pycryptodome==3.20.0
 PyJWT==2.8.0
 pyOpenSSL==24.2.1
