--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,9 @@ django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 hyperlink==21.0.0
 idna==3.4
 incremental==24.7.2
@@ -26,6 +29,7 @@ inflection==0.5.1
 msgpack==1.0.8
 packaging==24.1
 Pillow==10.1.0
+priority==1.3.0
 psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pyasn1_modules==0.4.0
