feat: refactor transaction serializers and update WebSocket to return serialized transaction data

--- a/.env-example
+++ b/.env-example
@@ -12,5 +12,5 @@ PGDATABASE='virtualbank'
 PGUSER='vb_owner'
 PGPASSWORD='*********'
 
-REDIS_URL=redis-cloud.com
+REDIS_URL=redis://your_redis_cloud_url:6379/0
 
