--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,5 @@
+DEV=TRUE
+ALLOWED_HOSTS=localhost:8000,127.0.0.1:8000
 SECRET_KEY=b309e3c3f0f6d3fb71a62617c100f59bb166a585b6b124d2
 JWT_KEY=00276c14dc8d8b2990a4b20024278907eccb2feec2a02eb8
 
@@ -12,5 +14,5 @@ PGDATABASE='virtualbank'
 PGUSER='vb_owner'
 PGPASSWORD='*********'
 
-REDIS_URL=redis://your_redis_cloud_url:6379/0
+REDIS_URL=redis://your_redis_cloud_url:6379
 
