--- a/.env-example
+++ b/.env-example
@@ -3,16 +3,11 @@ ALLOWED_HOSTS=localhost:8000,127.0.0.1:8000
 SECRET_KEY=b309e3c3f0f6d3fb71a62617c100f59bb166a585b6b124d2
 JWT_KEY=00276c14dc8d8b2990a4b20024278907eccb2feec2a02eb8
 
-DB_USER=postgres
-DB_PASSWORD=*******
-DB_NAME=virtual_bank
-DB_HOST=localhost
+DB_USER=vb_owner
+DB_PASSWORD=*********
+DB_NAME=virtualbank
+DB_HOST=example.us-east-2.aws.neon.tech
 DB_PORT=5432
-
-PGHOST='example.us-east-2.aws.neon.tech'
-PGDATABASE='virtualbank'
-PGUSER='vb_owner'
-PGPASSWORD='*********'
 
 REDIS_URL=redis://your_redis_cloud_url:6379
 
