Fixes #17 - Enhance API and Client configuration with environment variables, update Docker setup, and improve documentation. Refactor code to utilize dynamic API URLs across the application.

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,15 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 # DJANGO_SUPERUSER_PASSWORD=admin
 # DJANGO_SUPERUSER_EMAIL=admin@example.com
 
+# API and Client URLs and Ports
+API_HOST=localhost
+API_PORT=8030
+API_URL=http://${API_HOST}:${API_PORT}
+
+CLIENT_HOST=localhost
+CLIENT_PORT=8040
+CLIENT_URL=http://${CLIENT_HOST}:${CLIENT_PORT}
+ALLOWED_HOSTS=localhost:8030,127.0.0.1:8030,localhost:8040,127.0.0.1:8040,${API_HOST}:${API_PORT},${CLIENT_HOST}:${CLIENT_PORT}
+
 # Other application settings
 # Add your application-specific settings below
