--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-
   api:
     build:
       context: .
@@ -36,7 +35,7 @@ services:
       - ./api:/app/api
       - ./media:/app/media
     ports:
-      - "8030:8030"
+      - "${API_PORT:-8030}:${API_PORT:-8030}"
     depends_on:
       db:
         condition: service_healthy
@@ -48,8 +47,10 @@ services:
       - DB_HOST=db
       - REDIS_HOST=redis
       - DJANGO_SETTINGS_MODULE=virtual_bank.settings
-    command: python manage.py runserver 0.0.0.0:8030
-
+      - API_HOST=0.0.0.0
+      - API_PORT=${API_PORT:-8030}
+      - API_URL=http://${API_HOST:-api}:${API_PORT:-8030}
+    command: python manage.py runserver 0.0.0.0:${API_PORT:-8030}
   client:
     build:
       context: .
@@ -58,7 +59,7 @@ services:
       - ./clients:/app/clients
       - ./media:/app/media
     ports:
-      - "8040:8040"
+      - "${CLIENT_PORT:-8040}:${CLIENT_PORT:-8040}"
     depends_on:
       - api
       - db
@@ -69,8 +70,11 @@ services:
       - DB_HOST=db
       - REDIS_HOST=redis
       - DJANGO_SETTINGS_MODULE=virtual_bank.settings
-      - API_URL=http://api:8030
-    command: python manage.py runserver 0.0.0.0:8040
+      - CLIENT_HOST=0.0.0.0
+      - CLIENT_PORT=${CLIENT_PORT:-8040}
+      - CLIENT_URL=http://${CLIENT_HOST:-client}:${CLIENT_PORT:-8040}
+      - API_URL=http://api:${API_PORT:-8030}
+    command: python manage.py runserver 0.0.0.0:${CLIENT_PORT:-8040}
 
 volumes:
   postgres_data:
